# wall_chebyshev

./: .gitignore  .pre-commit-config.yaml  README.md  _typos.toml  pyproject.toml
.github/workflows/: python-app.yml
examples/: plot_wallcheb_hubbard_results.py  power_block_encoding.ipynb  test_import.ipynb  wall_chebyshev_projector.ipynb  wallcheb_hubbard_results_old.csv  wallcheb_plotting.py
wallcheb/: __init__.py
wallcheb/guppy/: __init__.py  __int__.py  power_block_encoding.py  product_block_encoding.py
wallcheb/operators/: __init__.py  hubbard_model.py
wallcheb/qtmlib/_types/: __init__.py  _core_types.py
wallcheb/qtmlib/_types/_type_stubs/: pytest_lazyfixture.pyi
wallcheb/qtmlib/_types/_type_stubs/pytest_notebook/: nb_regression.pyi
wallcheb/qtmlib/algorithms/: __init__.py
wallcheb/qtmlib/circuits/: __init__.py
wallcheb/qtmlib/circuits/core/: __init__.py  _registerbox.py  power_registerbox.py  qcontrol_registerbox.py  qreg_functions.py  register_circuit.py
wallcheb/qtmlib/circuits/lcu/: __init__.py  _lcu_registerbox.py  lcu_multiplexor.py
wallcheb/qtmlib/circuits/prepare/: __init__.py  _prepare_registerbox.py  prepare_multiplexor.py
wallcheb/qtmlib/circuits/select/: __init__.py  _select_registerbox.py  select_multiplexor.py
wallcheb/qtmlib/circuits/utils/: __init__.py  _testing.py  block_encoding_utils.py  lcu_utils.py  linalg.py  qsp_angles.py  qsvt_utils.py
wallcheb/qtmlib/measurement/: __init__.py  utils.py
wallcheb/qtmlib/operators/: __init__.py  hubbard_model.py  ising_model.py
wallcheb/utils/: __init__.py  utils.py
(+17 files in other folders)
