[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wallcheb"
version = "0.1.0"
description = "A python library using pytket to write quantum algorithms to be imported to guppy"
requires-python = ">=3.12"
authors = [{name = "Nathan Fitzpatrick", email = "nathan.fitzpatrick@quantinuum.com" }]

dependencies = [
    "guppylang",
    "selene-sim",
    "selene-core",
    "jupyter>=1.1.0",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "tket2~=0.11.0",
    "pre-commit",
    "pandas",
    "pandas-stubs",
    "numpy",
    "numba>=0.61.2",
]


[tool.uv]
prerelease = "allow"
dev-dependencies = [
    "ipykernel>=6.29.5",
    "pytest-notebook>=0.10.0",
    "pytest>=8.3.3",
    "pytest-lazy-fixtures",
    "ruff>=0.6.9",
    "sphinx==8.1.3",

]

[tool.setuptools.packages.find]
where = ["."]
include  = ["wallcheb*"]
exclude  = ["tests*", "docs*", "examples*"]


[tool.ruff]
# Enable flake8-bugbear (`B`) rules, pandas, see https://beta.ruff.rs/docs/rules/
lint.select = ["E", "F", "B", "RUF","PT","UP", "C4", "D"]
lint.ignore = ["RUF002"]
extend-exclude = ["**/*.ipynb", "tests/conftest.py", ".venv/**", "docs/**", "wallcheb/_types/_type_stubs/**"]
target-version = "py312"
[tool.lint.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/conftest.py" = ["D103"]

[tool.lint.ruff.pydocstyle]
# Use Google-style docstrings.
convention = "google"


[tool.pytest.ini_options]
testpaths = ["tests"]

